--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "@goodrequest/express-joi-to-swagger": "0.0.15",
+    "amqplib": "^0.8.0",
     "app-root-path": "^3.0.0",
     "awilix": "^4.3.4",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
